--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,234 @@
-huggingface-hub
-sentence-transformers
-
-Flask==2.0.1
-Werkzeug==2.2.2
-flask-cors
-
-langchain
-tiktoken
-unstructured
-unstructured[local-pdf]
-unstructured[local-inference]
-
-llama-index
-llama-index-llms-ollama
-llama-index-embeddings-huggingface
-torch
-
-# manually install below module to get rid of dependency install issues with `requirements.txt`
-# pip install llama-index-vector-stores-chroma
+absl-py==1.4.0
+aiohttp==3.9.3
+aiosignal==1.3.1
+anyio==3.7.1
+appnope==0.1.4
+asgiref==3.8.1
+asttokens==2.4.1
+astunparse==1.6.3
+async-timeout==4.0.2
+attrs==23.1.0
+backoff==2.2.1
+bcrypt==4.1.2
+beautifulsoup4==4.12.3
+blinker==1.7.0
+breadability==0.1.20
+build==1.2.1
+cachetools==5.3.1
+certifi==2023.5.7
+chardet==5.2.0
+charset-normalizer==3.1.0
+chroma-hnswlib==0.7.3
+chromadb==0.4.24
+click==8.1.6
+coloredlogs==15.0.1
+comm==0.2.1
+contourpy==1.1.0
+cycler==0.11.0
+dataclasses-json==0.5.14
+debugpy==1.8.1
+decorator==5.1.1
+Deprecated==1.2.14
+dirtyjson==1.0.8
+distlib==0.3.8
+distro==1.9.0
+dnspython==2.5.0
+docopt==0.6.2
+et-xmlfile==1.1.0
+executing==2.0.1
+fastapi==0.104.0
+filelock==3.12.2
+Flask==3.0.2
+Flask-Cors==4.0.0
+flatbuffers==23.5.26
+fonttools==4.41.0
+frozenlist==1.4.0
+fsspec==2023.6.0
+gast==0.4.0
+gensim==4.3.1
+google-auth==2.19.0
+google-auth-oauthlib==1.0.0
+google-pasta==0.2.0
+googleapis-common-protos==1.63.0
+greenlet==3.0.3
+grpcio==1.62.1
+h11==0.14.0
+h5py==3.8.0
+httpcore==1.0.5
+httptools==0.6.1
+httpx==0.27.0
+huggingface-hub==0.22.2
+humanfriendly==10.0
+idna==3.4
+img2table==1.2.10
+importlib-metadata==7.0.0
+importlib_resources==6.4.0
+InstructorEmbedding==1.0.1
+ipykernel==6.29.2
+ipython==8.21.0
+itsdangerous==2.1.2
+jedi==0.19.1
+Jinja2==3.1.2
+joblib==1.3.1
+jupyter_client==8.6.0
+jupyter_core==5.7.1
+keras==2.13.1rc0
+kiwisolver==1.4.4
+kubernetes==29.0.0
+langchain==0.0.253
+langsmith==0.0.19
+libclang==16.0.0
+llama-index==0.10.26
+llama-index-agent-openai==0.2.1
+llama-index-cli==0.1.11
+llama-index-core==0.10.26
+llama-index-embeddings-huggingface==0.2.0
+llama-index-embeddings-instructor==0.1.3
+llama-index-embeddings-openai==0.1.7
+llama-index-indices-managed-llama-cloud==0.1.5
+llama-index-legacy==0.9.48
+llama-index-llms-ollama==0.1.2
+llama-index-llms-openai==0.1.14
+llama-index-multi-modal-llms-openai==0.1.4
+llama-index-program-openai==0.1.5
+llama-index-question-gen-openai==0.1.3
+llama-index-readers-file==0.1.13
+llama-index-readers-llama-parse==0.1.4
+llama-index-vector-stores-chroma==0.1.6
+llama-parse==0.4.0
+llamaindex-py-client==0.1.15
+llvmlite==0.42.0
+lxml==4.9.3
+Markdown==3.4.3
+markdown-it-py==3.0.0
+MarkupSafe==2.1.2
+marshmallow==3.20.1
+matplotlib==3.7.2
+matplotlib-inline==0.1.6
+mdurl==0.1.2
+minijinja==1.0.16
+mmh3==4.1.0
+monotonic==1.6
+mpmath==1.3.0
+multidict==6.0.4
+mypy-extensions==1.0.0
+nest-asyncio==1.6.0
+networkx==3.1
+nltk==3.8.1
+numba==0.59.0
+numexpr==2.8.4
+numpy==1.24.3
+oauthlib==3.2.2
+onnxruntime==1.17.1
+openai==1.16.0
+openapi-schema-pydantic==1.2.4
+opencv-contrib-python==4.9.0.80
+openpyxl==3.1.2
+opentelemetry-api==1.24.0
+opentelemetry-exporter-otlp-proto-common==1.24.0
+opentelemetry-exporter-otlp-proto-grpc==1.24.0
+opentelemetry-instrumentation==0.45b0
+opentelemetry-instrumentation-asgi==0.45b0
+opentelemetry-instrumentation-fastapi==0.45b0
+opentelemetry-proto==1.24.0
+opentelemetry-sdk==1.24.0
+opentelemetry-semantic-conventions==0.45b0
+opentelemetry-util-http==0.45b0
+opt-einsum==3.3.0
+orjson==3.10.0
+overrides==7.7.0
+packaging==23.1
+pandas==2.0.2
+parso==0.8.3
+pdf2image==1.17.0
+pexpect==4.9.0
+Pillow==10.0.0
+platformdirs==4.2.0
+polars==0.20.7
+posthog==3.5.0
+prompt-toolkit==3.0.43
+protobuf==4.23.2
+psutil==5.9.8
+ptyprocess==0.7.0
+pulsar-client==3.4.0
+pure-eval==0.2.2
+pyarrow==15.0.0
+pyasn1==0.5.0
+pyasn1-modules==0.3.0
+pycountry==22.3.5
+pydantic==1.10.12
+Pygments==2.17.2
+pymongo==4.6.1
+PyMuPDF==1.23.21
+PyMuPDFb==1.23.9
+pyparsing==3.0.9
+pypdf==4.0.1
+PyPDF2==3.0.1
+PyPika==0.48.9
+pyproject_hooks==1.0.0
+pytesseract==0.3.10
+python-dateutil==2.8.2
+python-dotenv==1.0.1
+pytz==2023.3
+PyYAML==6.0.1
+pyzmq==25.1.2
+regex==2023.6.3
+requests==2.31.0
+requests-oauthlib==1.3.1
+rich==13.7.1
+rsa==4.9
+safetensors==0.4.2
+scikit-learn==1.3.0
+scipy==1.11.1
+sentence-transformers==2.6.1
+sentencepiece==0.1.99
+shellingham==1.5.4
+six==1.16.0
+sklearn==0.0.post7
+smart-open==6.3.0
+sniffio==1.3.0
+soupsieve==2.5
+SQLAlchemy==2.0.19
+stack-data==0.6.3
+starlette==0.27.0
+striprtf==0.0.26
+sumy==0.11.0
+sympy==1.12
+tabula==1.0.5
+tenacity==8.2.3
+tensorboard==2.13.0
+tensorboard-data-server==0.7.0
+tensorflow==2.13.0rc0
+tensorflow-estimator==2.13.0rc0
+tensorflow-macos==2.13.0rc0
+termcolor==2.3.0
+tesseract==0.1.3
+threadpoolctl==3.2.0
+tiktoken==0.6.0
+tokenizers==0.15.2
+torch==2.2.2
+torchaudio==2.0.2
+torchvision==0.15.2
+tornado==6.4
+tqdm==4.66.2
+traitlets==5.14.1
+transformers==4.39.2
+typer==0.12.0
+typer-cli==0.12.0
+typer-slim==0.12.0
+typing-inspect==0.9.0
+typing_extensions==4.8.0
+tzdata==2023.3
+urllib3==1.26.16
+uvicorn==0.23.2
+uvloop==0.19.0
+virtualenv==20.25.0
+watchfiles==0.21.0
+wcwidth==0.2.13
+websocket-client==1.7.0
+websockets==12.0
+Werkzeug==3.0.2
+wrapt==1.14.1
+XlsxWriter==3.1.9
+yarl==1.9.2
+zipp==3.18.1
